@@ -1,13 +1,14 @@
 
 
 mlr_1.2:
+- mlr now supports survuival analysis models
 - added FeatSelWrapper and getFeatSelResult
 - performance functions now allows to compute multiple measures
 - added multiclass.roc performance measure
 - observation weights can now also be specified in the task
 - added option on.learner.warning to configureMlr to suppress warnings in learners
 - fixed a bug in stratified CV where elements where not distributed as evenly as possible
-  when the split number did not divide the number of observation 
+  when the split number did not divide the number of observation
 - added class.weights param for classif.svm
 - add fix.factors option to randomForest
 - generic standard error estimation in randomForest and BaggingWrapper
@@ -17,6 +18,9 @@ mlr_1.2:
 -- classif.LiblineaRLogReg
 -- classif.LiblineaRBinary
 -- classif.LiblineaRMultiClass
+-- surv.CoxBoost
+-- surv.coxph
+-- surv.glmnet
 - new functions
 -- oversample, undersample
 -- makeOversampleWrapper, makeUndersampleWrapper
